--- a/src/app/views/pages/wealth-home/wealth-home.component.css
+++ b/src/app/views/pages/wealth-home/wealth-home.component.css
@@ -180,9 +180,10 @@
 
 
 
-.testimonialtext{
+.testimonialtext {
     text-align: justify !important;
 }
+
 .upquote {
     position: absolute;
     top: 0px;
@@ -410,6 +411,9 @@ p.trend-name {
 .font18 {
     font-size: 18px;
 }
+.font14 {
+    font-size: 14px;
+}
 
 .flow-row {
     flex-flow: row;
@@ -584,6 +588,61 @@ p.trend-name {
     margin-top: 25px;
     width: 330px !important;
 }
+
+table {
+    border-collapse: collapse;
+    width: 80%;
+    margin: 20px auto;
+    background-color: #f2f2f2;
+    border-radius: 10px !important;
+    /* Add border radius here */
+    border: none !important;
+    outline: none !important;
+    /* border-radius: 5px !important; */
+    /* border:2px solid red; */
+}
+
+th,
+td {
+    border: 1px solid #c9c7c7;
+    padding: 8px;
+    text-align: left;
+    /* border: none !important;
+    outline: none !important; */
+}
+
+/* th {
+    background-color: #f2f2f2;
+} */
+table,
+th,
+td {
+    border-collapse: collapse;
+    padding: 0.5rem;
+    text-align: left;
+    /* // text-align: center; */
+
+}
+
+thead th {
+    /* position: sticky; */
+    top: 0;
+    left: 0;
+    background-color: #d5d1defe;
+    /* cursor: pointer; */
+    text-transform: capitalize;
+}
+
+tbody tr:last-child {
+    /* color:green; */
+    font-weight: 600 !important;
+}
+
+/* .table__body::-webkit-scrollbar-thumb{
+    border-radius: .5rem;
+    background-color: #0004;
+    visibility: hidden;
+  } */
 
 @media (max-width: 575.98px) {
     .phydigitalsection {
@@ -769,6 +828,12 @@ p.trend-name {
         font-size: 15px;
         /* font-weight: 600; */
     }
+    .about .font12{
+        text-align: justify;
+        font-size: 12px;
+        color: #707070;
+        /* font-weight: 600; */
+    }
 
     .about .text-end p {
         text-align: right;
@@ -884,7 +949,8 @@ p.trend-name {
         width: 100%;
         margin-top: 20%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 50%;
     }
 
@@ -988,6 +1054,9 @@ p.trend-name {
         margin-left: 5px;
 
         letter-spacing: 0.45px;
+    }
+    .elementor-icon-list-text .font12{
+        font-size: 12px !important;
     }
 
     .partnerbtn {
@@ -1150,8 +1219,8 @@ p.trend-name {
         width: 20%;
 
     }
-    
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 
@@ -1172,11 +1241,13 @@ p.trend-name {
         width: 19%;
 
     }
+
     .client-img .col img {
         width: 90%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 }
@@ -1189,11 +1260,13 @@ p.trend-name {
         width: 19%;
 
     }
+
     .client-img .col img {
         width: 90%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 }
@@ -1206,15 +1279,18 @@ p.trend-name {
         width: 19%;
 
     }
+
     .client-img .col img {
         width: 90%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 
 }
+
 /* added by sw for partners icon's responsiveness end */
 
 
@@ -1392,7 +1468,8 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 }
@@ -1474,7 +1551,8 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
 }
@@ -1552,9 +1630,11 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 70%;
     }
+
     .loan-opt .money-mng img {
         width: 38%;
     }
@@ -1568,12 +1648,14 @@ p.trend-name {
     }
 
 }
+
 @media only screen and (min-width: 1450px) and (max-width: 1530px) {
     .client-img .col img {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 60%;
     }
 }
@@ -1672,7 +1754,8 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 50%;
     }
 }
@@ -1680,8 +1763,10 @@ p.trend-name {
 @media only screen and (min-width: 1550px) and (max-width: 1590px) {
     .client-img .col img {
         width: 85%;
-        margin-top: 15%;    }
-    .partner5 .col img{
+        margin-top: 15%;
+    }
+
+    .partner5 .col img {
         width: 60%;
     }
 }
@@ -1699,7 +1784,8 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 60%;
     }
 }
@@ -1820,7 +1906,8 @@ p.trend-name {
         width: 85%;
         margin-top: 15%;
     }
-    .partner5 .col img{
+
+    .partner5 .col img {
         width: 60%;
     }
 
