--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -196,8 +196,22 @@
 
 			<!-- <p class="text-center notetext">**Finizon is now registered as a Direct Broker |Registration No. 000, Registration Code No. IRDA/ DB 000/ 00, Valid till 09/06/2024, License category- Direct Broker (Life & General)| Visitors are hereby informed that their information submitted on the website may be shared with insurers.Product information is authentic and solely based on the information received from the insurers.</p> -->
 			<!-- <p class="notetext mb-0">Finizon is now registered as a Direct Broker |Registration No. 801, Registration Code No. IRDAI/ DB 864/ 2021, Valid till 30/01/2024, License category- Direct Broker (Life & General)| Visitors are hereby informed that their information submitted on the website may be shared with insurers. Product information is authentic and solely based on the information received from the insurers.</p> -->
+			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
+				<a href="http://65.1.237.83/">www.finizon.com</a>
+				<!-- <a href="https://uatnw.finizon.com/">www.finizon.com</a> -->
+				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
+				third party investment products . Investment Products are subject to investment risks, including the
+				possible loss of the principal amount invested. Past performance is not indicative of future result.
+			</p>
 
-			<p class="notetext mb-0" style="font-weight: 900; color: black; font-size: 15px;">AAPT Insurance Brokers
+			<p class="notetext">The investment decision is exclusively of the the Investor after independently analyzing
+				all scheme related documents and risk factors.AAPT Fintech does not guarantee any returns and is not the
+				Investment Manager of the products offered through its platform
+				<a href="http://65.1.237.83/">(www.Finizon.com)</a>
+				<!-- <a href="https://uatnw.finizon.com/">(www.Finizon.com)</a> -->
+
+			</p>
+			<p class="notetext mb-0">AAPT Insurance Brokers
 				Private Limited</p>
 			<p class="notetext mb-0">Registered office: Flat 103, Avalon Raheja Acropolis, Deonar Village, Deonar Pada
 				Road MUMBAI MUMBAI 400088 Principal Officer: Mr Tarun Taneja | Email ID: tarun.taneja@aaptfin.com |
@@ -213,21 +227,7 @@
 					href="https://dssrylrxc4fuc.cloudfront.net/attachments/files/000/042/598/original/Terms_and_Conditions_Sign_up_%281%29.pdf?1679036046"
 					target="_blank"> Visit T&C </a></p>
 
-			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
-				<!-- <a href="http://65.1.237.83/">www.finizon.com</a> -->
-				<a href="https://uatnw.finizon.com/">www.finizon.com</a>
-				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
-				third party investment products . Investment Products are subject to investment risks, including the
-				possible loss of the principal amount invested. Past performance is not indicative of future result.
-			</p>
-
-			<p class="notetext">The investment decision is exclusively of the the Investor after independently analyzing
-				all scheme related documents and risk factors.AAPT Fintech does not guarantee any returns and is not the
-				Investment Manager of the products offered through its platform
-				<!-- <a href="http://65.1.237.83/">(www.Finizon.com)</a> -->
-				<a href="https://uatnw.finizon.com/">(www.Finizon.com)</a>
-
-			</p>
+	
 			<div class="d-flex justify-content-center copyright">
 				<!-- <span><a  routerLink="/terms-of-use">Terms & Conditions</a> | </span> -->
 				<span><a href="#" (click)="scrollToTerms()">Terms & Conditions </a> | </span>
