[Priyanka]Added:customer investment link

--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -25,7 +25,7 @@
 
           <!-- below is temporary redirection of wealth-->
           <li class="nav-item">
-            <a class="nav-link" (click)="customerinvestmentlink()">Wealth</a>
+            <a class="nav-link" (click)="wealthlink()">Wealth</a>
           </li>
 
           <!-- *******Customer******* -->
@@ -131,7 +131,7 @@
 
 
       <!-- <li class="mobile"><a (click)="GotoWealth()">Wealth</a></li> -->
-      <li class="mobile"><a  (click)="customerinvestmentlink()">Wealth</a></li>
+      <li class="mobile"><a  (click)="wealthlink()">Wealth</a></li>
 
       <li class="mobile"><a data-bs-toggle="collapse" href="#Toolscollapse1" role="button" aria-expanded="false"
           aria-controls="collapseExample" class="drop-menu">Tools</a></li>
